force-app/main/default/objects/Asset/fields/Offer_for_TL_Retention_limited_to_200bps__c.field-meta.xml
<CustomField>
    <fullName>Offer_for_TL_Retention_limited_to_200bps__c</fullName>
    <label>Offer for TL Retention limited to 200bps</label>
    <type>TextArea</type>
</CustomField>