force-app/main/default/objects/Asset/fields/Office_Address__c.field-meta.xml
<CustomField>
    <fullName>Office_Address__c</fullName>
    <label>Office Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>