force-app/main/default/objects/Asset/fields/Old_Cibil_Score__c.field-meta.xml
<CustomField>
    <fullName>Old_Cibil_Score__c</fullName>
    <label>Old Cibil Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>