force-app/main/default/objects/Asset/fields/Old_LAN_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_LAN_Number__c</fullName>
    <label>Old LAN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>