force-app/main/default/objects/Asset/fields/Old_ROI__c.field-meta.xml
<CustomField>
    <fullName>Old_ROI__c</fullName>
    <label>Old ROI</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>