force-app/main/default/objects/Asset/fields/OTMMandate__c.field-meta.xml
<CustomField>
    <fullName>OTMMandate__c</fullName>
    <label>OTMMandate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>