force-app/main/default/objects/Asset/fields/Outstanding_Premium__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Premium__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Outstanding Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>