force-app/main/default/objects/Asset/fields/Overdue_charges__c.field-meta.xml
<CustomField>
    <fullName>Overdue_charges__c</fullName>
    <label>Overdue charges</label>
    <length>255</length>
    <type>Text</type>
</CustomField>