force-app/main/default/objects/Asset/fields/Owner_Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Owner_Client_Code__c</fullName>
    <description>ABSLI : 21 May 2024 - Created for ABSLI Asset Data Model requirement etc</description>
    <label>Owner Client Code</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>