force-app/main/default/objects/Asset/fields/OwnerClientCode__c.field-meta.xml
<CustomField>
    <fullName>OwnerClientCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ABHI</description>
    <label>Policy Owner ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets (Owner Client Code)</relationshipLabel>
    <relationshipName>Assets2</relationshipName>
    <type>Lookup</type>
</CustomField>