force-app/main/default/objects/Asset/fields/Partner_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Partner_Branch_Code__c</fullName>
    <description>This is partner Branch Code in case of ABSLI</description>
    <label>Partner Branch Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>