force-app/main/default/objects/Asset/fields/Partner_Sales_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_ID__c</fullName>
    <label>Partner Sales ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>