force-app/main/default/objects/Asset/fields/Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode__c</fullName>
    <label>Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C,</fullName>
            </value>
            <value>
                <fullName>CH,</fullName>
            </value>
            <value>
                <fullName>I,</fullName>
            </value>
            <value>
                <fullName>M,</fullName>
            </value>
            <value>
                <fullName>R,</fullName>
            </value>
            <value>
                <fullName>RTGS,</fullName>
            </value>
            <value>
                <fullName>D,</fullName>
            </value>
            <value>
                <fullName>N,</fullName>
            </value>
            <value>
                <fullName>TL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>