force-app/main/default/objects/Asset/fields/PaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>PaymentStatus__c</fullName>
    <description>ABHIL</description>
    <label>Payment Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>