force-app/main/default/objects/Asset/fields/PIVC_Status__c.field-meta.xml
<CustomField>
    <fullName>PIVC_Status__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>PIVC Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>