force-app/main/default/objects/Asset/fields/PlanCode__c.field-meta.xml
<CustomField>
    <fullName>PlanCode__c</fullName>
    <description>Used in Wellness</description>
    <label>Plan Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>