force-app/main/default/objects/Asset/fields/Policy_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_End_Date__c</fullName>
    <formula>Maturity_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy End Date</label>
    <type>Date</type>
</CustomField>