force-app/main/default/objects/Asset/fields/Policy_Flag__c.field-meta.xml
<CustomField>
    <fullName>Policy_Flag__c</fullName>
    <description>ABSLI Policy Flag.</description>
    <label>Policy Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>