force-app/main/default/objects/Asset/fields/Policy_Identification__c.field-meta.xml
<CustomField>
    <fullName>Policy_Identification__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Policy Identification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>