force-app/main/default/objects/Asset/fields/Policy_No__c.field-meta.xml
<CustomField>
    <fullName>Policy_No__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <externalId>true</externalId>
    <label>Policy No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>