force-app/main/default/objects/Asset/fields/Policy_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Start_Date__c</fullName>
    <formula>Issue_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Start Date</label>
    <type>Date</type>
</CustomField>