force-app/main/default/objects/Asset/fields/PolicyCancellationReason__c.field-meta.xml
<CustomField>
    <fullName>PolicyCancellationReason__c</fullName>
    <description>ABHIL</description>
    <label>Policy Cancellation Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>