force-app/main/default/objects/Asset/fields/PolicySubStatus__c.field-meta.xml
<CustomField>
    <fullName>PolicySubStatus__c</fullName>
    <description>ABHIL</description>
    <label>Policy Sub Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>