force-app/main/default/objects/Asset/fields/PolicySubType__c.field-meta.xml
<CustomField>
    <fullName>PolicySubType__c</fullName>
    <description>ABHIL</description>
    <label>Policy Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>