force-app/main/default/objects/Asset/fields/PolicyType__c.field-meta.xml
<CustomField>
    <fullName>PolicyType__c</fullName>
    <description>ABHIL</description>
    <label>Policy Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>