force-app/main/default/objects/Asset/fields/PortalCertificate__c.field-meta.xml
<CustomField>
    <fullName>PortalCertificate__c</fullName>
    <description>ABHIL</description>
    <label>Portal Certificate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>