force-app/main/default/objects/Asset/fields/Pre_Closure_Charges_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Pre_Closure_Charges_Applicable__c</fullName>
    <label>Pre Closure Charges Applicable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>