force-app/main/default/objects/Asset/fields/Pre_EMI__c.field-meta.xml
<CustomField>
    <fullName>Pre_EMI__c</fullName>
    <label>Pre EMI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>