force-app/main/default/objects/Asset/fields/Preclosure_Charges_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Preclosure_Charges_Applicable__c</fullName>
    <label>Preclosure Charges Applicable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>