force-app/main/default/objects/Asset/fields/PreviousPolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>PreviousPolicyNumber__c</fullName>
    <description>ABHI</description>
    <label>Previous Policy Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>