force-app/main/default/objects/Asset/fields/Product_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Product_Unique_Key__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Unique Key</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>