force-app/main/default/objects/Asset/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <description>ABHIL</description>
    <label>Product Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>