force-app/main/default/objects/Asset/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <description>This field will be used in Wellness.</description>
    <label>Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>