force-app/main/default/objects/Asset/fields/Profile_Completion_Percentage_at_folio_l__c.field-meta.xml
<CustomField>
    <fullName>Profile_Completion_Percentage_at_folio_l__c</fullName>
    <label>Profile Completion Percentage at folio l</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>