force-app/main/default/objects/Asset/fields/PromoCode__c.field-meta.xml
<CustomField>
    <fullName>PromoCode__c</fullName>
    <label>Promo code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>