force-app/main/default/objects/Asset/fields/Property_Detail__c.field-meta.xml
<CustomField>
    <fullName>Property_Detail__c</fullName>
    <label>Property Detail</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>