force-app/main/default/objects/Asset/fields/ProposalDate__c.field-meta.xml
<CustomField>
    <fullName>ProposalDate__c</fullName>
    <label>Proposal Date</label>
    <type>Date</type>
</CustomField>