force-app/main/default/objects/Asset/fields/Purpose_of_Insurance_3__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Insurance_3__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Purpose of Insurance 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>