force-app/main/default/objects/Asset/fields/Refund_Flag__c.field-meta.xml
<CustomField>
    <fullName>Refund_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refund Flag</label>
    <type>Checkbox</type>
</CustomField>