force-app/main/default/objects/Asset/fields/RejectionReason__c.field-meta.xml
<CustomField>
    <fullName>RejectionReason__c</fullName>
    <description>ABHIL</description>
    <label>Rejection Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>