force-app/main/default/objects/Asset/fields/RenewableFlag__c.field-meta.xml
<CustomField>
    <fullName>RenewableFlag__c</fullName>
    <description>ABHIL</description>
    <label>Renewable Flag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>