force-app/main/default/objects/Asset/fields/RenewalFlag__c.field-meta.xml
<CustomField>
    <fullName>RenewalFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Wellness</description>
    <label>Renewal Flag</label>
    <type>Checkbox</type>
</CustomField>