force-app/main/default/objects/Asset/fields/RenewedFlag__c.field-meta.xml
<CustomField>
    <fullName>RenewedFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewed Flag</label>
    <type>Checkbox</type>
</CustomField>