force-app/main/default/objects/Asset/fields/Revised_LOB__c.field-meta.xml
<CustomField>
    <fullName>Revised_LOB__c</fullName>
    <label>Revised LOB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Construction Finance</fullName>
            </value>
            <value>
                <fullName>Corporate and Institutional Business</fullName>
            </value>
            <value>
                <fullName>DB2B Ecosystem</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Emerging Business</fullName>
            </value>
            <value>
                <fullName>Emerging Business Wealth</fullName>
            </value>
            <value>
                <fullName>Infra</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Mortgages</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Securitisation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>