force-app/main/default/objects/Asset/fields/Revisionary_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Revisionary_Bonus__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Revisionary Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>