force-app/main/default/objects/Asset/fields/Revival_Quotation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Revival_Quotation_Amount__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Revival Quotation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>