force-app/main/default/objects/Asset/fields/Rider_Name__c.field-meta.xml
<CustomField>
    <fullName>Rider_Name__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Rider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>