force-app/main/default/objects/Asset/fields/Rider_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Rider_Payment_Term__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Rider Payment Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>