force-app/main/default/objects/Asset/fields/Rider_Premium_Amount_with_GST__c.field-meta.xml
<CustomField>
    <fullName>Rider_Premium_Amount_with_GST__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Rider Premium Amount with GST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>