force-app/main/default/objects/Asset/fields/RM_Assignment__c.field-meta.xml
<CustomField>
    <fullName>RM_Assignment__c</fullName>
    <defaultValue>&apos;Pending&apos;</defaultValue>
    <label>RM Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>