force-app/main/default/objects/Asset/fields/RM_Code__c.field-meta.xml
<CustomField>
    <fullName>RM_Code__c</fullName>
    <label>RM Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>