force-app/main/default/objects/Asset/fields/RM_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>RM_Contact_Number__c</fullName>
    <label>RM Mobile No</label>
    <type>Phone</type>
</CustomField>