force-app/main/default/objects/Asset/fields/RM_Name__c.field-meta.xml
<CustomField>
    <fullName>RM_Name__c</fullName>
    <label>RM Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>