force-app/main/default/objects/Asset/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <label>Sales Manager</label>
    <length>20</length>
    <type>Text</type>
</CustomField>