force-app/main/default/objects/Asset/fields/SandboxPolicy__c.field-meta.xml
<CustomField>
    <fullName>SandboxPolicy__c</fullName>
    <description>ABHIL</description>
    <label>Sandbox Policy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>