force-app/main/default/objects/Asset/fields/Scheme__c.field-meta.xml
<CustomField>
    <fullName>Scheme__c</fullName>
    <label>Scheme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>