force-app/main/default/objects/Asset/fields/Segment_Product__c.field-meta.xml
<CustomField>
    <fullName>Segment_Product__c</fullName>
    <label>Segment Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>