force-app/main/default/objects/Asset/fields/Servicing_Agent__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Agent__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Servicing Agent</label>
    <type>Url</type>
</CustomField>