force-app/main/default/objects/Asset/fields/ServicingBranchName__c.field-meta.xml
<CustomField>
    <fullName>ServicingBranchName__c</fullName>
    <description>ABHI</description>
    <label>Policy Servicing Branch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>