force-app/main/default/objects/Asset/fields/SNCB__c.field-meta.xml
<CustomField>
    <fullName>SNCB__c</fullName>
    <description>ABHIL</description>
    <label>SNCB</label>
    <length>100</length>
    <type>Text</type>
</CustomField>