force-app/main/default/objects/Asset/fields/SO_Name__c.field-meta.xml
<CustomField>
    <fullName>SO_Name__c</fullName>
    <label>SO Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>