force-app/main/default/objects/Asset/fields/Special_Surrender_Value__c.field-meta.xml
<CustomField>
    <fullName>Special_Surrender_Value__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Special Surrender Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>