force-app/main/default/objects/Asset/fields/SponsoredFlag__c.field-meta.xml
<CustomField>
    <fullName>SponsoredFlag__c</fullName>
    <description>ABHIL</description>
    <label>Sponsored Flag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>