force-app/main/default/objects/Asset/fields/SRMCode__c.field-meta.xml
<CustomField>
    <fullName>SRMCode__c</fullName>
    <label>SRM Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>