force-app/main/default/objects/Asset/fields/SRMEmail__c.field-meta.xml
<CustomField>
    <fullName>SRMEmail__c</fullName>
    <label>Sales Manager Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>