force-app/main/default/objects/Asset/fields/SRMMobileNumber__c.field-meta.xml
<CustomField>
    <fullName>SRMMobileNumber__c</fullName>
    <label>Sales Manager Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>