force-app/main/default/objects/Asset/fields/SRMName__c.field-meta.xml
<CustomField>
    <fullName>SRMName__c</fullName>
    <label>Sales Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>