force-app/main/default/objects/Asset/fields/Status_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Changed_Date__c</fullName>
    <description>This field is used for ABSLI, to capture status changed.</description>
    <label>Status Changed Date</label>
    <type>Date</type>
</CustomField>