force-app/main/default/objects/Asset/fields/Sub_scheme__c.field-meta.xml
<CustomField>
    <fullName>Sub_scheme__c</fullName>
    <label>Sub scheme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>