force-app/main/default/objects/Asset/fields/Sum_Assured__c.field-meta.xml
<CustomField>
    <fullName>Sum_Assured__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Sum Assured</label>
    <length>255</length>
    <type>Text</type>
</CustomField>