force-app/main/default/objects/Asset/fields/Sum_Assured_Formula__c.field-meta.xml
<CustomField>
    <fullName>Sum_Assured_Formula__c</fullName>
    <description>This field is used to show the sum assured value without decimal places.</description>
    <formula>VALUE(Sum_Assured__c)</formula>
    <label>Sum Assured</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>