force-app/main/default/objects/Asset/fields/Surrender_Charges__c.field-meta.xml
<CustomField>
    <fullName>Surrender_Charges__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Surrender Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>