force-app/main/default/objects/Asset/fields/Survival_benefit__c.field-meta.xml
<CustomField>
    <fullName>Survival_benefit__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Survival benefit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>