force-app/main/default/objects/Asset/fields/TAXDetails__c.field-meta.xml
<CustomField>
    <fullName>TAXDetails__c</fullName>
    <description>ABHI</description>
    <label>TAX Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>