force-app/main/default/objects/Asset/fields/TDS_Indicator__c.field-meta.xml
<CustomField>
    <fullName>TDS_Indicator__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>TDS Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>