force-app/main/default/objects/Asset/fields/Tenor__c.field-meta.xml
<CustomField>
    <fullName>Tenor__c</fullName>
    <label>Tenor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>