force-app/main/default/objects/Asset/fields/Total_DP_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_DP_Charges__c</fullName>
    <label>Total DP Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>