force-app/main/default/objects/Asset/fields/TotalHR__c.field-meta.xml
<CustomField>
    <fullName>TotalHR__c</fullName>
    <description>ABHIL</description>
    <label>Total HR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>