force-app/main/default/objects/Asset/fields/TPA__c.field-meta.xml
<CustomField>
    <fullName>TPA__c</fullName>
    <description>ABHIL</description>
    <label>TPA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>