force-app/main/default/objects/Asset/fields/TPAContactDetails__c.field-meta.xml
<CustomField>
    <fullName>TPAContactDetails__c</fullName>
    <description>ABHI</description>
    <label>TPA Contact Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>